# x2gokdrive

./: Makefile  Makefile.am  README.md  os.c  quilt.env  remote.c  remote.h  x2gokdrive.c  x2gokdrive.h  x2gokdrive.spec  x2gokdrivecursor.c  x2gokdrivedebug.h  x2gokdriveinit.c  x2gokdrivelog.h  x2gokdriveremote.c  x2gokdriveremote.h  x2gokdriveselection.c  x2gokdriveselection.h
debian/: changelog  control  copyright  rules  rules.flags  xserver-x2gokdrive.install
man/: Makefile.am  x2gokdrive.man
patches/: sles12sp1.patch
patches.legacy/: README.legacy-patches.md  osuse_42.3.patch
patches.xorg/1.18.4/: xorg-server-configure-ac.patch  xorg-server-hw-kdrive-Makefile-am.patch
patches.xorg/1.19.2/: xorg-server-configure-ac.patch  xorg-server-hw-kdrive-Makefile-am.patch
patches.xorg/1.19.6/: xorg-server-configure-ac.patch  xorg-server-hw-kdrive-Makefile-am.patch
patches.xorg/1.20.1/: xorg-server-configure-ac.patch  xorg-server-hw-kdrive-Makefile-am.patch
patches.xorg/1.20.11/: quilt.env  xorg-server-configure-ac.patch
patches.xorg/1.20.13/: xorg-server-configure-ac.patch  xorg-server-hw-kdrive-Makefile-am.patch
patches.xorg/1.20.3/: xorg-server-configure-ac.patch  xorg-server-hw-kdrive-Makefile-am.patch
patches.xorg/1.20.4/: series  xorg-server-configure-ac.patch  xorg-server-hw-kdrive-Makefile-am.patch
patches.xorg/1.20.5/: xorg-server-configure-ac.patch  xorg-server-hw-kdrive-Makefile-am.patch
patches.xorg/1.20.6/: xorg-server-configure-ac.patch  xorg-server-hw-kdrive-Makefile-am.patch
patches.xorg/1.20.7/: xorg-server-configure-ac.patch  xorg-server-hw-kdrive-Makefile-am.patch
patches.xorg/21.1.3/: quilt.env  xorg-server-configure-ac.patch
patches.xorg/21.1.4/: xorg-server-configure-ac.patch  xorg-server-hw-kdrive-Makefile-am.patch
patches.xorg/common/: quilt.env
testscripts/: run-x2gokdriveclient-to-x2gokdrive-on-localhost  run-x2gokdriveclient-to-x2gokdrive-over-network
